Fix z-index for refine overlay

--- a/src/scss/seldom.scss
+++ b/src/scss/seldom.scss
@@ -2,6 +2,7 @@
     position: absolute;
     margin-top: 5px;
     font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    z-index: 110000;
 }
 
 .seldom__refine-selection a {
